--- a/index.html
+++ b/index.html
@@ -4,69 +4,220 @@
     <meta charset="UTF-8">
     <title>Assistente de Viagem Inteligente</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 20px;
+        :root {
+            --primary: #4361ee;
+            --primary-dark: #3a56d4;
+            --secondary: #4cc9f0;
+            --success: #4ade80;
+            --danger: #f87171;
+            --light: #f8fafc;
+            --dark: #0f172a;
+            --gray: #e2e8f0;
+            --border: #cbd5e1;
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
         }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input, select {
-            width: 100%;
-            padding: 8px;
+
+        * {
+            margin: 0;
+            padding: 0;
             box-sizing: border-box;
         }
-        button {
-            padding: 10px 20px;
-            background-color: #007BFF;
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #e4edf5 100%);
+            color: var(--dark);
+            line-height: 1.6;
+            padding: 20px;
+            min-height: 100vh;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 16px;
+            box-shadow: var(--shadow);
+            overflow: hidden;
+        }
+
+        header {
+            background: linear-gradient(to right, var(--primary), var(--secondary));
             color: white;
-            border: none;
-            cursor: pointer;
-            margin-right: 10px;
+            padding: 30px;
+            text-align: center;
         }
-        button:disabled {
-            background-color: #ccc;
+
+        header h1 {
+            font-size: 2rem;
+            font-weight: 600;
+            margin-bottom: 10px;
         }
-        #loading {
-            display: none;
-            margin-top: 10px;
-            font-style: italic;
-            color: #555;
+
+        .form-container {
+            padding: 30px;
         }
-        #result-container {
-            margin-top: 20px;
-        }
-        .section {
+
+        .form-group {
             margin-bottom: 20px;
         }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: 500;
+            color: var(--dark);
+        }
+
+        input, select {
+            width: 100%;
+            padding: 12px 16px;
+            border: 1px solid var(--border);
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+        }
+
+        input:focus, select:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(67, 97, 238, 0.2);
+        }
+
+        .btn-group {
+            display: flex;
+            gap: 12px;
+            margin-top: 20px;
+        }
+
+        button {
+            padding: 12px 24px;
+            border: none;
+            border-radius: 8px;
+            font-size: 1rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        button[type="submit"] {
+            background-color: var(--primary);
+            color: white;
+        }
+
+        button[type="submit"]:hover {
+            background-color: var(--primary-dark);
+        }
+
+        button#export-pdf-btn {
+            background-color: #10b981;
+            color: white;
+        }
+
+        button#export-pdf-btn:hover {
+            background-color: #059669;
+        }
+
+        button:disabled {
+            background-color: var(--gray);
+            cursor: not-allowed;
+        }
+
+        #loading {
+            display: none;
+            text-align: center;
+            padding: 20px;
+            color: var(--primary);
+            font-style: italic;
+        }
+
+        .loading-spinner {
+            border: 4px solid rgba(67, 97, 238, 0.2);
+            border-top: 4px solid var(--primary);
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 10px;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        #result-container {
+            padding: 0 30px 30px;
+        }
+
+        .section {
+            margin-bottom: 25px;
+            background: var(--light);
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: var(--shadow);
+        }
+
         .section-title {
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #333;
+            background: var(--primary);
+            color: white;
+            padding: 14px 20px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
         }
+
+        .relatorio, .avaliacao {
+            padding: 20px;
+            font-family: 'Consolas', 'Courier New', monospace;
+            font-size: 0.95rem;
+            line-height: 1.7;
+            white-space: pre-wrap;
+            background: white;
+            border-top: 1px solid var(--border);
+        }
+
         .relatorio {
-            background-color: #e8f4fd;
-            padding: 15px;
-            border-radius: 5px;
-            white-space: pre-wrap;
+            background-color: #f0f9ff;
         }
+
         .avaliacao {
-            background-color: #f0f8e8;
-            padding: 15px;
-            border-radius: 5px;
-            white-space: pre-wrap;
+            background-color: #f0fdf4;
         }
+
         .error {
-            background-color: #ffe8e8;
-            padding: 15px;
-            border-radius: 5px;
-            color: #d00;
+            background-color: #fef2f2;
+            color: #dc2626;
+            padding: 20px;
+            border-radius: 8px;
+            border-left: 4px solid #dc2626;
+            margin-top: 20px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            color: #64748b;
+            font-size: 0.9rem;
+            border-top: 1px solid var(--border);
+        }
+
+        @media (max-width: 768px) {
+            .btn-group {
+                flex-direction: column;
+            }
+
+            button {
+                width: 100%;
+            }
+
+            header, .form-container, #result-container {
+                padding: 20px;
+            }
         }
     </style>
     <!-- Bibliotecas para PDF -->
@@ -75,48 +226,65 @@
 </head>
 <body>
 
-    <h1>Assistente de Viagem Inteligente</h1>
-    <form id="travel-form">
-        <div class="form-group">
-            <label for="dias">Dias de viagem:</label>
-            <input type="number" id="dias" value="7" min="1" max="30" required>
+    <div class="container">
+        <header>
+            <h1>✈️ Assistente de Viagem Inteligente</h1>
+            <p>Planeje sua próxima viagem com IA</p>
+        </header>
+
+        <div class="form-container">
+            <form id="travel-form">
+                <div class="form-group">
+                    <label for="dias">Dias de viagem:</label>
+                    <input type="number" id="dias" value="7" min="1" max="30" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="orcamento">Orçamento (USD):</label>
+                    <input type="number" id="orcamento" value="2000" min="100" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="regiao">Região de interesse:</label>
+                    <select id="regiao" required>
+                        <option value="internacional">Internacional</option>
+                        <option value="Europa">Europa</option>
+                        <option value="América do Sul">América do Sul</option>
+                        <option value="Ásia">Ásia</option>
+                        <option value="Oceania">Oceania</option>
+                    </select>
+                </div>
+
+                <div class="btn-group">
+                    <button type="submit">Planejar Viagem</button>
+                    <button type="button" id="export-pdf-btn" disabled>📄 Exportar PDF</button>
+                </div>
+            </form>
+
+            <div id="loading">
+                <div class="loading-spinner"></div>
+                <p>Gerando seu relatório de viagem...</p>
+            </div>
         </div>
 
-        <div class="form-group">
-            <label for="orcamento">Orçamento (USD):</label>
-            <input type="number" id="orcamento" value="2000" min="100" required>
+        <div id="result-container" style="display: none;">
+            <div id="relatorio-section" class="section">
+                <div class="section-title">📄 Relatório de Viagem</div>
+                <div id="relatorio" class="relatorio"></div>
+            </div>
+
+            <div id="avaliacao-section" class="section">
+                <div class="section-title">🔍 Avaliação de Qualidade</div>
+                <div id="avaliacao" class="avaliacao"></div>
+            </div>
         </div>
 
-        <div class="form-group">
-            <label for="regiao">Região de interesse:</label>
-            <select id="regiao" required>
-                <option value="internacional">Internacional</option>
-                <option value="Europa">Europa</option>
-                <option value="América do Sul">América do Sul</option>
-                <option value="Ásia">Ásia</option>
-                <option value="Oceania">Oceania</option>
-            </select>
-        </div>
+        <div id="error" class="error" style="display: none;"></div>
 
-        <button type="submit">Planejar Viagem</button>
-        <button type="button" id="export-pdf-btn" disabled>Exportar PDF</button>
-    </form>
-
-    <div id="loading">Gerando seu relatório de viagem...</div>
-
-    <div id="result-container" style="display: none;">
-        <div id="relatorio-section" class="section">
-            <div class="section-title">📄 Relatório de Viagem</div>
-            <div id="relatorio" class="relatorio"></div>
-        </div>
-
-        <div id="avaliacao-section" class="section">
-            <div class="section-title">🔍 Avaliação de Qualidade</div>
-            <div id="avaliacao" class="avaliacao"></div>
-        </div>
+        <footer>
+            <p>Assistente de Viagem Inteligente com CrewAI • Feito com ❤️</p>
+        </footer>
     </div>
-
-    <div id="error" class="error" style="display: none;"></div>
 
     <script>
         document.getElementById('travel-form').addEventListener('submit', async (e) => {
@@ -160,7 +328,7 @@
                     relatorioDiv.textContent = data.relatorio_viagem;
                     avaliacaoDiv.textContent = data.avaliacao;
                     resultContainer.style.display = 'block';
-                    exportBtn.disabled = false; // Habilita o botão de exportar
+                    exportBtn.disabled = false;
                 } else {
                     errorDiv.textContent = 'Erro: ' + data.mensagem;
                     errorDiv.style.display = 'block';
